tests/snapshots/parser_tests__parse_heading.snap
---
source: tests/parser_tests.rs
expression: blocks
---
[
  {
    "Heading": {
      "level": 2,
      "content": {
        "spans": [
          {
            "text": "Test Heading",
            "formatting": {
              "bold": false,
              "italic": false,
              "code": false,
              "link": null
            }
          }
        ]
      }
    }
  }
]
