tests/snapshots/parser_tests__parse_list.snap
---
source: tests/parser_tests.rs
expression: blocks
---
[
  {
    "List": {
      "ordered": false,
      "items": [
        {
          "spans": [
            {
              "text": "Item 1",
              "formatting": {
                "bold": false,
                "italic": false,
                "code": false,
                "link": null
              }
            }
          ]
        },
        {
          "spans": [
            {
              "text": "Item 2",
              "formatting": {
                "bold": false,
                "italic": false,
                "code": false,
                "link": null
              }
            }
          ]
        }
      ]
    }
  }
]
