tests/snapshots/parser_tests__parse_simple_html.snap
---
source: tests/parser_tests.rs
expression: blocks
---
[
  {
    "Paragraph": {
      "spans": [
        {
          "text": "Hello ",
          "formatting": {
            "bold": false,
            "italic": false,
            "code": false,
            "link": null
          }
        },
        {
          "text": "world",
          "formatting": {
            "bold": true,
            "italic": false,
            "code": false,
            "link": null
          }
        },
        {
          "text": "!",
          "formatting": {
            "bold": false,
            "italic": false,
            "code": false,
            "link": null
          }
        }
      ]
    }
  }
]
